--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 
     <version.io.opentracing>0.30.0</version.io.opentracing>
     <version.io.opentracing.contrib-opentracing-spring-web>0.0.7</version.io.opentracing.contrib-opentracing-spring-web>
+    <version.io.opentracing.contrib-opentracing-spring-jms>0.0.3</version.io.opentracing.contrib-opentracing-spring-jms>
     <version.io.github.openfeign-feign-okhttp>9.5.0</version.io.github.openfeign-feign-okhttp>
     <version.io.github.openfeign.opentracing>0.0.5</version.io.github.openfeign.opentracing>
     <version.org.springframework.boot>1.4.3.RELEASE</version.org.springframework.boot>
@@ -86,9 +87,9 @@
       </dependency>
 
       <dependency>
-        <groupId>javax.jms</groupId>
-        <artifactId>javax.jms-api</artifactId>
-        <version>${version.javax.jms.api}</version>
+        <groupId>io.opentracing.contrib</groupId>
+        <artifactId>opentracing-jms-spring</artifactId>
+        <version>${version.io.opentracing.contrib-opentracing-spring-jms}</version>
       </dependency>
 
       <dependency>
